--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,7 +13,7 @@
 
 <style>
     nav {
-        background-color: #8c6c6c;
+        background-color: darkblue;
         padding: 1rem;
         display: flex;
         justify-content: space-between;
@@ -41,5 +41,10 @@
     
     nav a:hover {
         background-color: rgba(255, 255, 255, 0.1);
+    }
+    @media (min-width 768px) {
+        nav { flex-direction:  row;}
+        .nav-links {flex-direction: row;}
+        
     }
 </style>
