--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,4 +57,15 @@ const { title } = Astro.props;
     .footer-sticky {
         margin-top: auto;
     }
+
+    @media (min-width: 768px) {
+        /* Global Typography */
+        h1 { font-size: 4rem;}
+        h2 { font-size: 2.5rem;}
+        p { font-size: 1.5rem;}
+
+        /* Global spacing */
+        section { padding: 3rem 2rem;}
+        
+    }
 </style>
