--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,29 +3,46 @@
 ---
 <div class="footer">
     <div class="footer-column">
+        <h3>Company Info</h3>
         <a href="/">Home</a>
         <a href="/about">About</a>
 
     </div>
     <div class="footer-column">
+        <h3>Column 2</h3>
         <a href="/services">Services</a>
         <a href="/contact">Contact Us</a>
-        
     </div>
 
 </div>
 <style>
+
+
     .footer {
         display: flex;
         /* stack vertically on mobile */
-        flex-direction: column; 
-        justify-content: center;
-        align-items: center;
+        flex-direction: row; 
+        justify-content: space-around;
         background-color: darkblue;
         color: white;
         padding: 1rem;
+        gap: 1rem;
+    }
+    .footer-column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         gap: 0.5rem;
     }
+    .footer-column h3 {
+        /* remove default browser settings */
+        margin: 0;
+        /* Make headers smaller than main test */
+        font-size: 1.2rem;
+        /* Add space below the header */
+        margin-bottom: 0.5rem;
+    }
+
 
     a {
 
