--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import Footer from '../components/Footer.astro';
 
 <section>
 <h1> 
-    Precise Reach. Real Growth.
+    Precise Reach. <br>
+    Real Growth.
 </h1>
-
 </section>
 <section>
 <p>
@@ -63,11 +63,13 @@ import Footer from '../components/Footer.astro';
         font-size: 4rem;
         font-weight: bold;
         color: #333;
+        text-align: center;
     }
 
     p {
         font-size: 1.5rem;
         color: #333;
+        text-align: center;
     }
     .side-by-side {
         display: flex;
