--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -17,7 +17,7 @@
 </nav>
 
 <script type="module">
-    const button = document.querySelector('hamburger');
+    const button = document.querySelector('.hamburger');
     const links = document.getElementById('nav-links');
 
     button?.addEventListener('click', () => {
@@ -29,6 +29,13 @@
 </script>
 
 <style>
+
+    nav {
+        position: sticky;
+        top: 15px;
+        z-index: 1000;
+        background: darkblue;
+    }
     
     .site-nav {
         background-color: darkblue;
