--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -42,15 +42,17 @@
     
     .site-nav {
         background-color: darkblue;
-        padding: 1rem;
+        padding: 1.2rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: min(92%,900px);
+        width: min(85%,900px);
+        height: 20px;
         margin-inline: auto;
         border-radius: 16px;
         box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
         border: 1px solid rgba(255, 255, 255, 0.08);
+        margin-top: 0.5rem;
     }
 
     
