--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Footer from '../components/Footer.astro';
 
 <section class = "side-by-side">
     <h2>
-        [Impressive fact]
+        [Impressive Fact]
     </h2>
 
     <h2>
