--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,14 +19,19 @@
 
 
     .footer {
+
         display: flex;
         /* stack vertically on mobile */
+        margin-inline: auto;
+        margin-bottom: 15px;
         flex-direction: row; 
         justify-content: space-around;
         background-color: darkblue;
         color: white;
         padding: 1rem;
         gap: 1rem;
+        width: min(85%,900px);
+        border-radius: 16px;
     }
     .footer-column {
         display: flex;
@@ -45,7 +50,6 @@
 
 
     a {
-
         padding: 1rem;
         text-decoration: none;
         border-radius:4px;
