--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,6 +2,7 @@
 
 ---
 <nav class="site-nav">
+    <!-- <img src="/logos/minimal-pj-logo.jpg" alt="pj logo"> -->
     <h1>PJ Marketing Solutions</h1>
     <button class="hamburger" aria-expanded="false" aria-controls="nav-links" aria-label="Menu">
         <span></span>
@@ -12,7 +13,7 @@
         <a href="/">Services</a>
         <a href="/about">About</a>
         <a href="/services">Testimonials</a>
-        <a href="/contact">Contact Us</a>
+        <a class="contact-button" href="/contact">Contact Us</a>
     </div>
 </nav>
 
@@ -41,13 +42,13 @@
     }
     
     .site-nav {
-        background-color: darkblue;
-        padding: 1.2rem;
+        background-color: white;
+        padding: 0.3rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: min(85%,900px);
-        height: 20px;
+        height: auto;
         margin-inline: auto;
         border-radius: 16px;
         box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
@@ -58,8 +59,9 @@
     
     nav h1 {
         margin: 0;
-        color: white;
-        font-size: 1rem;
+        color: black;
+        font-size: 14px;
+        margin-left: 10px;
     }
     
     /* hide links on mobile */
@@ -67,10 +69,11 @@
         display: none;
         flex-direction: column;
         gap: 0.75rem;
+        align-items: center;
     }
     
     .nav-links a {
-        color: white;
+        color: black;
         text-decoration: none;
         padding: 0.5rem 0.5rem;
         border-radius: 4px;
@@ -79,6 +82,27 @@
     
     nav a:hover {
         background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    .nav-links a.contact-button {
+        margin-inline-start: auto;
+        display: inline-flex;
+        align-items: center;    
+        /* padding: 0.5rem 0.9rem; */
+        color: #fff;
+        border: 1px solid rgba(255, 255, 255, 0.12);
+        border-radius: 12px;
+        text-decoration: none;
+        line-height: 1;
+        cursor: pointer;
+        background-color: darkblue;
+        padding: 1rem;
+    }
+
+    .nav-links a.contact-button:hover {
+        background-color: darkblue;
+        color: #fff;
+        filter: brightness(1.1);
     }
 
     .hamburger {
@@ -97,7 +121,7 @@
         display: block;
         width: 100%;
         height: 2px;
-        background: white;
+        background: black;
         border-radius: 1px;
     }
 
@@ -120,7 +144,7 @@
         /* Desktop and up */
     @media (min-width: 1024px) {
         nav h1 {
-            font-size: 1.5rem;
+            font-size: 18px;
         }
     }
 
