minor text edit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Footer from '../components/Footer.astro';
             Real Growth.
         </h1>
         <p>
-            Data-driven marketing strategies to drive measurable results for your business.
+            Data-driven marketing strategies to drive measurable results for your event.
         </p>
     </div>
 
