--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,7 @@
 
 ---
 <nav class="site-nav">
-    <!-- <img src="/logos/minimal-pj-logo.jpg" alt="pj logo"> -->
+    <img class="nav-logo" src="/logos/minimal-pj-logo.jpg" alt="pj logo">
     <h1>PJ Marketing Solutions</h1>
     <button class="hamburger" aria-expanded="false" aria-controls="nav-links" aria-label="Menu">
         <span></span>
@@ -89,6 +89,11 @@
         color: black;
         font-size: 14px;
         margin-left: 10px;
+    }
+
+    .nav-logo {
+        width: 3rem;
+        height: auto;
     }
     
     /* hide links on mobile */
