Started on services page, changed company theme palette

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,15 +26,12 @@
         display: flex;
         /* stack vertically on mobile */
         margin-inline: auto;
-        margin-bottom: 15px;
         flex-direction: column; 
         justify-content: space-around;
-        background-color: darkblue;
+        background-color: #163E93;
         color: white;
-        padding: 1rem;
+        padding: 5rem 1rem;
         gap: 1rem;
-        width: min(85%,900px);
-        border-radius: 16px;
         position: relative;
     }
 
