--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,9 +13,9 @@
     </button>
 
     <div id="nav-links" class="nav-links">
-        <a href="/">Services</a>
-        <a href="/about">About</a>
-        <a href="/services">Testimonials</a>
+        <a href="/about">About Us</a>
+        <a href="/services">Services</a>
+        <!-- <a href="/testimonials">Testimonials</a> -->
         <a class="contact-button" href="/contact">Contact Us</a>
     </div>
 </nav>
@@ -174,12 +174,12 @@
         color: #fff;
         border: 1px solid rgba(0, 0, 0, 0.08);
         border-radius: 12px;
-        background-color: darkblue;
+        background-color: #163E93;
         padding: 0.9rem 1.2rem;
     }
 
     .nav-links a.contact-button:hover {
-        background-color: darkblue;
+        background-color: #163E93;
         color: #fff;
         filter: brightness(1.1);
     }
