--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,7 @@ import Footer from '../components/Footer.astro';
 
 <section class = "side-by-side">
     <h2>
+        Trusted Partner Since 2014
     </h2>
 
     <h2>
