--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -146,7 +146,7 @@ import Footer from "../components/Footer.astro"
 <style>
     .page-hero {
         position: relative;
-        min-height: 50vh;
+        min-height: 60vh;
         width: 100%;
         overflow: hidden;
         background-image: url('/services-hero.jpg');
@@ -172,7 +172,8 @@ import Footer from "../components/Footer.astro"
     }
 
     .hero-overlay h1 {
-        font-weight: 500;
+        font-size: 3rem;
+        font-weight: 300;
     }
 
     .services-intro {
@@ -209,6 +210,7 @@ import Footer from "../components/Footer.astro"
     }
     .service-split h3 {
         font-size: 2.3rem;
+        font-weight: 600;
     }
     .service-image {
         grid-area: media;
